--- a/client/styles.css
+++ b/client/styles.css
@@ -1,3 +1,34 @@
 body {
   background: teal;
 }
+
+#home {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+#title {
+  display: flex;
+  justify-content: center;
+}
+
+#headerContainer {
+  display: flex;
+  justify-content: space-between;
+}
+
+#mainContainer {
+  display: flex;
+  justify-content: flex-start;
+}
+
+#cardContainer {
+  display: flex;
+  flex: 6 1 auto;
+}
+
+#filterContainer {
+  display: flex;
+  flex: 1 1 auto;
+}
