--- a/client/styles.css
+++ b/client/styles.css
@@ -2,6 +2,10 @@ body {
   background: teal;
 }
 
+ul {
+  list-style-type: none;
+}
+
 #home {
   display: flex;
   flex-direction: column;
@@ -25,10 +29,54 @@ body {
 
 #cardContainer {
   display: flex;
-  flex: 6 1 auto;
+  flex: 5 1 auto;
+  flex-wrap: wrap;
 }
 
 #filterContainer {
   display: flex;
   flex: 1 1 auto;
+}
+
+.card {
+  background-color: wheat;
+  width: 250px;
+  height: 300px;
+  margin: 5px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cardHead {
+  display: flex;
+  justify-content: space-between;
+}
+
+.cardHeadLeft,
+.cardHeadRight {
+  width: 75px;
+}
+
+.fourWheelDrive,
+.favorite {
+  width: 50px;
+}
+
+.mountainImg {
+  height: 50px;
+  width: 100%;
+  background-size: 100%;
+}
+
+.details {
+  display: flex;
+  flex-direction: column;
+  align-self: flex-start;
+}
+
+.moreInfo {
+  height: 25px;
+  width: 150px;
 }
