--- a/client/styles.css
+++ b/client/styles.css
@@ -18,13 +18,22 @@ h4 {
 }
 
 #title {
-  display: flex;
-  justify-content: center;
+  font-size: 46px;
 }
 
 #headerContainer {
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
+  background-color: wheat;
+  border-radius: 5px;
+  padding: 15px;
+}
+
+#centerHeader {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 #mainContainer {
@@ -88,6 +97,10 @@ h4 {
   display: flex;
   flex-direction: column;
   align-self: flex-start;
+}
+
+.completionDate, .completionTime {
+  color: green;
 }
 
 .moreInfo {
