--- a/client/styles.css
+++ b/client/styles.css
@@ -103,8 +103,16 @@ h2 {
   font-weight: bolder;
 }
 
-.card {
-  background-color: wheat;
+.driveLegend {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.card,
+.completedCard {
+  background-color: rgb(211, 231, 154);
   width: 250px;
   height: 350px;
   margin: 5px;
@@ -114,6 +122,15 @@ h2 {
   align-items: center;
   justify-content: space-between;
   /* flex: auto; */
+}
+
+.card {
+  background-color: wheat;
+}
+
+#filterContainer,
+.card {
+  box-shadow: 1px 3px 5px 5px rgb(7, 116, 116);
 }
 
 .cardHead {
