--- a/client/styles.css
+++ b/client/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Covered+By+Your+Grace&family=Rock+Salt&display=swap');
 body {
-  background: teal;
+  background: rgb(113, 172, 172);
   font-family: 'Amatic SC', cursive;
   font-size: 1.2rem;
 }
@@ -116,6 +116,7 @@ h2 {
   width: 250px;
   height: 350px;
   margin: 5px;
+  padding-bottom: 10px;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -130,7 +131,7 @@ h2 {
 
 #filterContainer,
 .card {
-  box-shadow: 1px 3px 5px 5px rgb(7, 116, 116);
+  box-shadow: 1px 3px 5px 5px rgb(80, 148, 148);
 }
 
 .cardHead {
@@ -173,6 +174,7 @@ h2 {
 
 .details {
   display: flex;
+  margin: 0;
   flex-direction: column;
 }
 
@@ -181,10 +183,33 @@ h2 {
   color: green;
 }
 
+.completed {
+  display: flex;
+  justify-content: space-between;
+  margin: 5px;
+}
+
+.completeMe {
+  margin: 5px;
+  margin-bottom: 0px;
+  display: flex;
+  flex-direction: column;
+}
+
+.completeForm {
+  height: 20px;
+  width: 100px;
+  background-color: rgb(248, 240, 225);
+}
+
+.completeButton,
 .moreInfo {
-  height: 35px;
+  height: 30px;
   width: 175px;
-  margin-bottom: 5px;
+  margin: 0px;
   font-family: 'Amatic SC', cursive;
   font-size: 1.5rem;
+  align-self: center;
+  text-align: center;
+  font-size: 1.2rem;
 }
